--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@awesome-cordova-plugins/sqlite": "^6.3.0",
+    "@awesome-cordova-plugins/sqlite-porter": "^6.3.0",
     "@capacitor/app": "5.0.3",
     "@capacitor/core": "5.0.5",
     "@capacitor/haptics": "5.0.4",
     "@capacitor/keyboard": "5.0.4",
     "@capacitor/status-bar": "5.0.4",
     "@ionic/angular": "^7.0.0",
+    "cordova-sqlite-storage": "^6.1.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
